fix image stretching

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -54,6 +54,9 @@
 .post-img {
   height: 100%;
   width: 100%;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
 }
 
 .post-footer-container {
